fix(sandbox): sync response contract compatibility